fixtures/cs-hash-05/good/argon2-low-no-password-context.ts
import argon2 from "argon2";
export async function hashApiKey(apiKey: string) {
	return argon2.hash(apiKey, { timeCost: 1, memoryCost: 4096 });
}
