fixtures/cs-hash-05/bad/argon2-sync-low.ts
import { hashSync } from "argon2";
export function hashPassword(password: string) {
	return hashSync(password, { timeCost: 2, memoryCost: 65536 });
}
